sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: value += is not a member of Int
          i+=1
           ^